--- a/Machine Learning Overview.ipynb
+++ b/Machine Learning Overview.ipynb
@@ -22,6 +22,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<img src=\"./images/mlOverview.png\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Importance of Machine Learning \n",
     "ML will help software engineer to: \n",
     "- reduce the time you spend programming\n",
@@ -59,37 +66,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<img src=\"./images/mlDataModel.png\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Hypothesis\n",
     "- A hypothesis is a certain function that we believe (or hope) is similar to the true function, the target function that we want to model. In context of email spam classification, it would be the rule we came up with that allows us to separate spam from non-spam emails.\n",
     "- Model: In machine learning field, the terms hypothesis and model are often used interchangeably. In other sciences, they can have different meanings, i.e., the hypothesis would be the \"educated guess\" by the scientist, and the model would be the manifestation of this guess that can be used to test the hypothesis."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<img src=\"./images/modelOverview.png\">"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
