--- a/Machine Learning Overview.ipynb
+++ b/Machine Learning Overview.ipynb
@@ -5,17 +5,27 @@
    "metadata": {},
    "source": [
     "## What does ML do?\n",
-    "- ML systems learn how to combine input to produce useful predictions on never-before-seen data.\n",
+    "ML systems learn how to combine input to produce useful predictions on never-before-seen data.\n",
+    "- Supervised or Unsupervised\n",
+    "    - All data is labeled and the algorithms learn to predict the output from the input data.\n",
+    "    - Unsupervised: All data is unlabeled and the algorithms learn to inherent structure from the input data.\n",
+    "    - Semi-supervised: Some data is labeled but most of it is unlabeled and a mixture of supervised and unsupervised techniques can be used.\n",
+    "\n",
     "- Regression vs. classification\n",
     "    - A regression model predicts continuous values. For example, regression models make predictions that answer questions like the following:\n",
-    "    - What is the value of a house in California?\n",
-    "    - What is the probability that a user will click on this ad?\n",
+    "        - What is the value of a house in California?\n",
+    "        - What is the probability that a user will click on this ad?\n",
+    "    - A classification model predicts discrete values. For example, classification models make predictions that answer questions like the following:\n",
+    "        - Is a given email message spam or not spam?\n",
+    "        - Is this an image of a dog, a cat, or a hamster?\n",
     "\n",
-    "A classification model predicts discrete values. For example, classification models make predictions that answer questions like the following:\n",
-    "- Is a given email message spam or not spam?\n",
-    "- Is this an image of a dog, a cat, or a hamster?\n",
+    "Keys for beginner:\n",
+    "**ML systems learn how to combine input to produce useful predictions on never-before-seen data.**\n",
     "\n",
-    "REF: https://developers.google.com/machine-learning/crash-course/framing/ml-terminology\n"
+    "REF: \n",
+    "\n",
+    "1.https://developers.google.com/machine-learning/crash-course/framing/ml-terminology\n",
+    "2.https://machinelearningmastery.com/supervised-and-unsupervised-machine-learning-algorithms/"
    ]
   },
   {
@@ -29,9 +39,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Importance of Machine Learning \n",
+    "#### Benifit to Developers \n",
     "ML will help software engineer to: \n",
-    "- reduce the time you spend programming\n",
+    "- reduce the programming time\n",
     "- customize the product making them better for the specific groups of people (English spelling corrector -> other language)\n",
     "- solve problem which have no idea how to do by hand\n",
     "NOTE: machine change the ways you think about the problem, rather than logically and mathematically, to natural science (analyze the result of experient)\n",
@@ -52,8 +62,11 @@
     "- The model which is essentially just a mathematical function that calculates some output given the input in the placeholder variables and the model variables.\n",
     "\n",
     "Think about classification, ML is trying to use a mathematical approach to find out the relationship between the features and labels , just like what we did when we were still a student:\n",
+    "\n",
     "        f(x)=y\n",
+    "        \n",
     "Example 1: Features(sepal & petal length) -> Labels (Iris species)\n",
+    "\n",
     "Example 2: Features(house size) -> Labels (House Price)\n",
     "\n",
     "Ref:\n",
@@ -84,11 +97,6 @@
    "source": [
     "<img src=\"./images/modelOverview.png\">"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
