--- a/1. Machine Learning Overview.ipynb
+++ b/1. Machine Learning Overview.ipynb
@@ -32,7 +32,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"./images/mlOverview.png\">"
+    "<img src=\"./images/mlOverview.png\" style=\"width:600px\">"
    ]
   },
   {
@@ -79,7 +79,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"./images/mlDataModel.png\">"
+    "<img src=\"./images/mlDataModel.png\" style=\"width:600px\">"
    ]
   },
   {
@@ -95,8 +95,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"./images/modelOverview.png\">"
+    "<img src=\"./images/modelOverview.png\" style=\"width:600px\">"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
